# aabw_tascotrack_p1

./: .env .example  .env.example  .gitignore  BACKEND_OPENAI_SECURITY_POLICY.md  MY_TASCO_FULL_API_SWAGGER.docx  README.md  TODO.md  alembic.ini  database_design.md  docker-compose.yml  message.md  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: README.md  __init__.py
apps/api/src/: __init__.py  config.py  dependencies.py  main.py
apps/web/: package-lock.json  vite.config.ts
apps/web/src/: App.tsx
apps/worker/: __init__.py
apps/worker/src/: __init__.py  consumer.py
config/models/: embedding-qwen3-0.6b.json  reranker-qwen3-0.6b.json
database/migrations/: env.py  script.py.mako
database/migrations/versions/: 0001_secure_core.py  0002_ingestion_qa.py  4ca8265f06fd_init_rag_schema_and_triggers.py
database/seeds/: generate_seeds.py
database/seeds/aie1/: chunks.jsonl  corpus_profile.json  documents.jsonl  embeddings.jsonl  embeddings.manifest.json
docs/: AIE1_EXECUTION_PLAN.md  AIE1_PHASE2_DESIGN.md  BACKEND_OPERATIONS.md
modules/: README.md  __init__.py
modules/agent/: __init__.py
modules/agent/contracts/: run.py
modules/agent/src/: runtime.py
modules/evidence/: __init__.py
modules/evidence/src/: __init__.py
modules/governance/: __init__.py
modules/governance/contracts/: evaluation.py
modules/governance/src/: __init__.py
modules/guardrails/: __init__.py
modules/guardrails/contracts/: verdicts.py
modules/guardrails/src/: __init__.py  answer_validation.py  sensitivity.py
modules/identity/src/: __init__.py  subject.py
modules/knowledge/contracts/: retrieval.py
modules/knowledge/src/: __init__.py  storage.py
modules/models/src/: __init__.py
modules/policy/: __init__.py
modules/policy/src/: engine.py
modules/tools/src/: actions.py  mocks.py
package/: FINAL_AGENTIC_RAG_ARCHITECTURE_PLAN.md  PROJECT_STRUCTURE.md  ai_workspace_dataset_vietnamese_participants.xlsm  openapi.yaml
scripts/: check_openai_boundary.py  prepare_aie1_dataset.py  smoke.ps1
tests/: __init__.py  conftest.py  test_actions.py  test_aie1_embedding_design.py  test_aie1_ingestion.py  test_aie2_retrieval.py  test_chat.py  test_documents.py  test_evaluation.py  test_governance.py  test_health.py  test_knowledge.py  test_secure_core.py
tests/agent/: test_state_machine.py
tests/contract/: test_openapi_runtime.py  test_retrieval_contracts.py
tests/evaluation/: test_public_harness.py  test_public_rbac.py  test_xlsm_dataset.py
tests/guardrails/: test_egress.py  test_screening.py
tests/integration/: test_backend_flow.py
tests/knowledge/: test_offline_adapter.py
tests/security/invariants/: test_acl_no_unauthorized_evidence.py  test_offline_retrieval_acl.py  (+1 more)
(+91 files in other folders)
