[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mytasco-secure-agentic-rag"
version = "0.1.0"
description = "My Tasco Secure Agentic RAG API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "tenacity>=8.0,<10.0",
    "PyJWT>=2.9,<3.0",
    "structlog>=24.0,<26.0",
    "opentelemetry-api>=1.28,<2.0",
    "pgvector>=0.3,<1.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "modules*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL and Redis services",
]
