[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mytasco-secure-agentic-rag"
version = "0.1.0"
description = "My Tasco Secure Agentic RAG API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "tenacity>=8.0,<10.0",
    "PyJWT>=2.9,<3.0",
    "structlog>=24.0,<26.0",
    "opentelemetry-api>=1.28,<2.0",
    "opentelemetry-sdk>=1.28,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28,<2.0",
    "pgvector>=0.3,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "openpyxl>=3.1,<4.0",
    "defusedxml>=0.7,<1.0",
    "numpy>=1.26,<3.0",
    "boto3>=1.35,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]
ai = [
    "torch>=2.3,<3.0",
    "transformers>=4.51,<5.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "modules*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL and Redis services",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["tests"]
